OJ-2007-10-26-0: Enhance:   Modified checktree/bugs/issuezilla/1780/check.60.exp
                            to verify that IZ 1780 is gone
                 Review:    JG 

MD-2007-10-26-0: Enhance:   o added Issue test for IZ 2406
                            o enhanced backup_restore test
                 Review:    HP

RH-2007-10-26-1: Bugfix:    o configuration upgrade from 1.12 to 1.13
                              was not possible
                 Review:    RD

RH-2007-10-26-0: Enhance:   o New configuration parameter for the port
                              of qmasters JMX MBean Server
                            o install_core_system supports enabling the
                              JMX MBean Server
                 Review:    MD
 
OJ-2007-10-18-0: Enhance:   Modified checktree/functional/tight_integration
                            to print warning on failure due to IZ 1681
                 Review:    JG 

JG-2007-10-18-1: Bugfix:    fixed system_tests/clients/common/advance_reservation
                 Review:    RD

RD-2007-10-18-0: Bugfix:    fixed qmod/reschedule test
                 Review:    JG

JG-2007-10-18-0: Bugfix:    o reintegrated JG-2007-10-10-0 and JG-2007-10-11-0
                            o fixed arch resolving on lx26 hosts using lx24 
                              binaries
                 Review:    RD (MD for JG-2007-10-10-0 and JG-2007-10-11-0)

RD-2007-10-16-0: Bugfix:    disabled test for IZ 1745 in consumable_resources
                 Review:    JG

JG-2007-10-16-0: Enhancem.: New test bugs/issuezilla/2396.
                 Review:    RD

RD-2007-10-12-0: Bugfix:    reverted to state before AP-2007-10-09-0
                 Review:    AH

AP-2007-10-12-0: Bugfix:    fixed other bugs related to AP-2007-10-09-0 changes.
                 Review:    JG

JO-2007-10-12-0: Bugfix:    Corrected ARCO_VIEWS for v. 62
                 Review:    AP

MD-2007-10-12-0: Bugfix:    o added test bugs/issuezilla/2372